# fm

./: .env.example  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  test.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  router.ts  style.css
frontend/src/components/: IconFile.vue  IconFolder.vue
frontend/src/components/icons/: SvgIcons.tsx
frontend/src/services/: api.ts  theme.ts  websocket.ts
frontend/src/store/: auth.ts  host.ts
frontend/src/views/: Dashboard.vue  Login.vue
src/: main.rs
src/api/: auth.rs  files.rs  hosts.rs  mod.rs
src/auth/: encryption.rs  jwt.rs  middleware.rs  mod.rs
src/db/: mod.rs
src/hosts/: http.rs  local.rs  mod.rs  sftp.rs
src/metrics/: mod.rs
src/models/: mod.rs
src/ws/: mod.rs
