[package]
name = "fm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.6"
actix = "0.13"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Database
# SQLite via sqlx (persistent file-based DB). Set DATABASE_URL to "sqlite://fm.db"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

# Encryption
ring = "0.17"
base64 = "0.21"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# SFTP
ssh2 = "0.9"

# WebSocket
actix-web-actors = "4.2"

# Auth middleware
actix-web-httpauth = "0.8"

# Metrics
prometheus = "0.13"

# Static asset embedding
rust-embed = "8.2"

# File handling
mime_guess = "2.0"
futures = "0.3"
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
